# layer8-proxy

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
docs/: architecture.md  d18-reframe.md  deployment.md  m8-handoff.md
docs/user/: README.md  add-a-tool.md  add-an-agent.md  architecture.md  backup-and-restore.md  deploy.md  expose-an-agent.md  getting-started.md  kamiwaza-mcp.md  rotate-credentials.md  smoke-test.md  troubleshoot.md  upgrade.md
docs/user/concepts/: README.md  topology.md
examples/: hermes-routing.example.md  tools.example.yaml
examples/site/: .env.example  .gitignore  README.md  agents.test.yaml.example  agents.yaml.example  backup.sh  deploy.sh  docker-compose.override.yml  secrets.bootstrap.sh  site.cfg.example
examples/site/cron/: backup.cron
examples/site/locksmith/: base.yaml
examples/site/pipelock/: pipelock.yaml
examples/site/scripts/: bootstrap-operator.py  decrypt-creds.sh  encrypt-creds.sh  kamiwaza-mcp-registrar.py  migrate-env-to-1password.sh  provision-host-sa.sh  register-agents.sh  render-env-from-1password.sh  render_configs.py  rotate-creds-passphrase.sh  rotate-oauth-sealing-key.sh  rotate-operator-token.sh  verify_configs.py
examples/site/tools/: _defaults.yaml
lf-scan/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
lf-scan/tests/: conftest.py  test_auth.py  test_health.py  test_scan_input.py  test_scan_output.py
locksmith/: Dockerfile  config.example.yaml
pipelock/: Dockerfile  pipelock.example.yaml
scripts/: bootstrap.sh  init-site.sh  verify.sh
(+6 files in other folders)
